// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all() - not error when empty 1`] = `Array []`;

exports[`all() - return 1 file 1`] = `
Array [
  Object {
    "foo": "bar",
  },
]
`;

exports[`all() - return files from given folder 1`] = `
Array [
  Object {
    "foo": "bar",
  },
  Object {
    "foo": "baz",
  },
]
`;

exports[`all() - return mulitiple files 1`] = `
Array [
  Object {
    "foo": "bar",
  },
  Object {
    "foo": "baz",
  },
  Object {
    "foo": "bazoooka",
  },
]
`;
